--- a/finans-backup/css/style.css
+++ b/finans-backup/css/style.css
@@ -7,3 +7,8 @@
     padding: 60px 0;
     border-bottom: 1px solid #e5e5e5;
 }
+
+.rodape{
+    padding: 20px 0;
+    border-bottom: 1px solid #e5e5e5;
+}
